// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with all props 1`] = `
<DocumentFragment>
  <svg
    class="rl-rect"
    height="600"
    role="img"
    viewBox="0 0 150 600"
    width="150"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Minimalist building
    </title>
    <desc>
      A rectangle that is 4 times taller than it is wide
    </desc>
    <rect
      height="600"
      width="150"
    />
  </svg>
</DocumentFragment>
`;

exports[`without title & desc 1`] = `
<DocumentFragment>
  <svg
    class="rl-rect"
    height="600"
    role="img"
    viewBox="0 0 150 600"
    width="150"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="600"
      width="150"
    />
  </svg>
</DocumentFragment>
`;
